--- a/WebApp/Views/Students/Room.cshtml
+++ b/WebApp/Views/Students/Room.cshtml
@@ -1,33 +1,4 @@
-﻿@model StudentsPageViewModel
-<h1 class="h3 mb-2 text-black-800"> Tables</h1>
-<table>
-    <tdead>
-        <tr>
-           
-                <th>Sudent ID</th>
-                <th>last Name</th>
-                <th>First Name</th>
-                <th>Middle Name</th>
-                <th>Age</th>
-                <th>Address</th>
-                <th>Year</th>
-        </tr>
-    </tdead>
-    <tbody>
-        @foreach(var row in Model.Students)
-        {
-            <tr>
-                <td>@row.SudentID</td>
-                <td>@row.LastName</td>
-                <td>@row.FirstName</td>
-                <td>@row.MiddleName</td>
-                <td>@row.Age</td>
-                <td>@row.Address</td>
-                <td>@row.Year</td>
-            </tr>
-        }
-    </tbody>
-</table>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
